# punching-fist

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DESIGN.md  Dockerfile  Justfile  PHASE1_PLAN.md  PHASE1_STATUS.md  PHASE1_WEEK2_STATUS.md  PHASE1_WEEK3_STATUS.md  PHASE1_WEEK3_SUMMARY.md  PHASE1_WEEK4_STATUS.md  PHASE1_WEEK4_SUMMARY.md  PHASE1_WEEK5_STATUS.md  PHASE1_WEEK6_MILESTONE.md  README.md  config.yaml  env.example  test-environment.md  test_prometheus_alert.json  test_simple_alert.json
.github/workflows/: ci.yml
charts/punching-fist/: .gitignore  .helmignore  Chart.yaml  README.md  values-local.yaml  values.yaml
charts/punching-fist/crds/: phase1-crds.yaml  workflows.yaml
charts/punching-fist/templates/: NOTES.txt  _helpers.tpl  alertmanager-source.yaml  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  headless-service.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml  stdout-sink.yaml
charts/punching-fist/templates/tests/: prometheus-rules.yaml  test-namespace.yaml  test-pipeline.yaml  test-pods.yaml
crates/operator/: Cargo.toml
crates/operator/examples/: README.md  chatbot_with_kubectl.rs  test_agent.rs  test_agent_runtime.rs  test_anthropic.rs  test_openai.rs  test_rig_tools.rs  test_workflow_agent.rs
crates/operator/migrations/: 001_phase1_schema.sql
crates/operator/src/: config.rs  lib.rs  main.rs  metrics.rs  template.rs
crates/operator/src/agent/: behavior.rs  chatbot.rs  investigator.rs  mod.rs  provider.rs  result.rs  runtime.rs  safety.rs  templates.rs
crates/operator/src/agent/tools/: RIG_INTEGRATION.md  curl.rs  kubectl.rs  mod.rs  promql.rs  script.rs
crates/operator/src/controllers/: mod.rs  sink.rs  source.rs  workflow.rs
crates/operator/src/crd/: common.rs  mod.rs  sink.rs  source.rs  workflow.rs
crates/operator/src/kubernetes/: client.rs  mod.rs  resources.rs
crates/operator/src/openhands/: client.rs  mod.rs
crates/operator/src/scheduler/: mod.rs  task.rs
crates/operator/src/server/: mod.rs  routes.rs  webhook.rs  websocket.rs
crates/operator/src/server/receivers/: mod.rs  prometheus.rs  traits.rs
crates/operator/src/sinks/: mod.rs  stdout.rs
crates/operator/src/sources/: mod.rs  webhook.rs
crates/operator/src/store/: config.rs  factory.rs  mod.rs  models.rs  postgres.rs  sqlite.rs
crates/operator/src/workflow/: context.rs  engine.rs  executor.rs  mod.rs  state.rs
crates/operator/static/: index.html
crates/operator/tests/: server_test.rs
deploy/crds/: phase1-crds.yaml
deploy/examples/: source-alertmanager.yaml
docs/: README.md
docs/modules/: agent.md  controllers.md  sources.md  workflows.md
examples/: alert-triage-workflow.yaml  alertmanager-sink.yaml  alertmanager-source.yaml  complete-setup.yaml  slack-sink.yaml  test-stdout-pipeline.yaml  test-webhook-source.yaml
migrations/: 20240320000000_initial_schema.sql
test-resources/: README.md  TEST_INSTRUCTIONS.md  send-test-alert.sh
