[workspace]
members = [
    "crates/operator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Kubernetes operator for AI-powered cluster maintenance"

[workspace.dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Kubernetes
kube = { version = "0.88", features = ["runtime", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1.0"

# Configuration
config = "0.13"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid", "migrate"] }
async-trait = "0.1"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

[workspace.dev-dependencies]
mockall = "0.12" 