[package]
name = "punching-fist-operator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Kubernetes operator for AI-powered cluster maintenance"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Kubernetes
kube = { version = "0.88", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19", features = ["v1_25"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12" 