[package]
name = "punching-fist-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]

[dependencies]
# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest.workspace = true

# Metrics
prometheus.workspace = true

# Time handling
chrono.workspace = true
futures.workspace = true
http.workspace = true

# Environment variables  
dotenvy.workspace = true

# Database
sqlx.workspace = true
async-trait.workspace = true

# UUID
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true 