[package]
name = "punching-fist-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]

[[bin]]
name = "generate-crds"
path = "src/bin/generate_crds.rs"

[[example]]
name = "test_agent"
path = "examples/test_agent.rs"

[[example]]
name = "test_workflow_agent"
path = "examples/test_workflow_agent.rs"

[[example]]
name = "test_anthropic"
path = "examples/test_anthropic.rs"

[[example]]
name = "test_openai"
path = "examples/test_openai.rs"

[[example]]
name = "test_rig_tools"
path = "examples/test_rig_tools.rs"

[features]
default = ["server"]
server = []

[dependencies]
# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Kubernetes
kube.workspace = true
k8s-openapi.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
serde_yaml = "0.9"

# Logging and tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client
reqwest.workspace = true

# Metrics
prometheus.workspace = true
lazy_static.workspace = true

# Time handling
chrono.workspace = true
futures.workspace = true
http.workspace = true

# Environment variables  
dotenvy.workspace = true

# Database
sqlx.workspace = true
async-trait.workspace = true

# UUID
uuid.workspace = true

# Hashing
sha2 = "0.10"

# Regex
regex = "1.10"

# LLM Integration
rig-core = "0.12"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
axum-test = "17.3.0"